--- a/firstProject2/templates/list_mentors.html
+++ b/firstProject2/templates/list_mentors.html
@@ -1,6 +1,6 @@
 <!--este es el template hijo que hereda de base.html-->
 
-{ % extends 'templates/base.html % }
+{ % extends 'base.html % }
 
     {% block title %}
     <!--esto es del hijo -->
